--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .body_backgorund 
 {
-    background-image:url(backg.jpg);
+    background-image:url("backg.jpg");
     background-position:center;
     background-size:cover;
 }
